crates/cobrust-lsp/tests/snapshots/wave_5_e2e__snapshot_cross_file_outgoing_calls_mixed.snap
---
source: crates/cobrust-lsp/tests/wave_5_e2e.rs
assertion_line: 542
expression: calls
snapshot_kind: text
---
[
  {
    "to": {
      "name": "helper_local",
      "kind": 12,
      "uri": "file:///primary.cb",
      "range": {
        "start": {
          "line": 1,
          "character": 0
        },
        "end": {
          "line": 1,
          "character": 12
        }
      },
      "selectionRange": {
        "start": {
          "line": 0,
          "character": 3
        },
        "end": {
          "line": 0,
          "character": 15
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 3,
          "character": 11
        },
        "end": {
          "line": 3,
          "character": 25
        }
      }
    ]
  },
  {
    "to": {
      "name": "helper_remote",
      "kind": 12,
      "uri": "file:///other.cb",
      "range": {
        "start": {
          "line": 1,
          "character": 0
        },
        "end": {
          "line": 1,
          "character": 13
        }
      },
      "selectionRange": {
        "start": {
          "line": 0,
          "character": 3
        },
        "end": {
          "line": 0,
          "character": 16
        }
      }
    },
    "fromRanges": [
      {
        "start": {
          "line": 3,
          "character": 28
        },
        "end": {
          "line": 3,
          "character": 43
        }
      }
    ]
  }
]
