crates/cobrust-lsp/tests/snapshots/wave_5_e2e__snapshot_delta_response_with_edits.snap
---
source: crates/cobrust-lsp/tests/wave_5_e2e.rs
assertion_line: 466
expression: result
snapshot_kind: text
---
{
  "resultId": "st-snap-2b",
  "edits": []
}
